--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Brandon Keepers",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^7.1.0",
     "deepmerge": "^2.2.1",
     "js-yaml": "^3.12.0",
     "probot": "^9.5.0"
   },
   "devDependencies": {
+    "debug": "^4.1.1",
     "jest": "^22.4.4",
     "smee-client": "^1.0.2",
     "standard": "^12.0.0"
