--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Brandon Keepers",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^7.1.0",
+    "bunyan": "github:piccobit/node-bunyan#1.8.13",
     "deepmerge": "^2.2.1",
     "js-yaml": "^3.12.0",
     "probot": "^9.5.0"
